/**
 * <p>This is Hoard class for unimelb SWEN20003 2020s2 assignment 2</p>
 * <p>A stationary type actor, can store fruits </p>
 * <p>Created on 9/18/2020</p>
 * @author NuoyanChen (nuoyanc@student.unimelb.edu.au)
 */
public class Hoard extends Depot{

    public Hoard(double x, double y) {
        super("res/images/hoard.png", x, y);
    }

}
