/**
 * <p>This is MitosisPool class for unimelb SWEN20003 2020s2 assignment 2</p>
 * <p> When MobileActor collide with the MitosisPool, they will split</p>
 * <p>Created on 9/18/2020</p>
 * @author NuoyanChen (nuoyanc@student.unimelb.edu.au)
 */
public class MitosisPool extends Actor{

    public MitosisPool(double x, double y) {
        super("res/images/pool.png", x, y);
    }

}
