/**
 * <p>This is Stockpile class for unimelb SWEN20003 2020s2 assignment 2</p>
 * <p>A stationary type Actor, can store fruits </p>
 * <p>Created on 9/18/2020</p>
 * @author NuoyanChen (nuoyanc@student.unimelb.edu.au)
 */
public class Stockpile extends Depot{

    public Stockpile(double x, double y) {
        super("res/images/cherries.png", x, y);
    }

}
